updated all code

--- a/demo/index.html
+++ b/demo/index.html
@@ -18,7 +18,7 @@
 
   <button id="toggle">Toggle Spinner</button>
 
-	<x-spinner id="spinner" fade></x-spinner>
+	<x-spinner id="spinner" label="Loading..." fade></x-spinner>
 
 
 </body>
